<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/PrefCategory_Options">
		<CheckBoxPreference android:key="PrefShowNotification"
			android:title="@string/PrefTitle_PrefShowNotification" android:summary="@string/PrefDesc_PrefShowNotification" />
	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/PrefCategory_ActivateOnly">
		<CheckBoxPreference android:key="PrefActivateOnlyWhenCharging"
			android:title="@string/PrefTitle_PrefActivateOnlyWhenCharging" android:summary="@string/PrefDesc_PrefActivateOnlyWhenCharging" />
		<CheckBoxPreference android:key="PrefActivateOnlyWhenHeadphonesPluggedIn"
			android:title="@string/PrefTitle_PrefActivateOnlyWhenHeadphonesPluggedIn" android:summary="@string/PrefDesc_PrefActivateOnlyWhenHeadphonesPluggedIn" />
		<CheckBoxPreference android:key="PrefActivateOnlyWhenDocked"
			android:title="@string/PrefTitle_PrefActivateOnlyWhenDocked" android:summary="@string/PrefDesc_PrefActivateOnlyWhenDocked" />
	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/PrefCategory_PreventActivationOn">

		<CheckBoxPreference android:key="PrefPreventActivationOnCameraButton"
					android:title="@string/PrefTitle_PreventActivationOnCameraButton" android:summary="@string/PrefDesc_PreventActivationOnCameraButton" />
		<CheckBoxPreference android:key="PrefPreventActivationOnCallButton"
					android:title="@string/PrefTitle_PreventActivationOnCallButton" android:summary="@string/PrefDesc_PreventActivationOnCallButton" />
			
	</PreferenceCategory>
</PreferenceScreen>
